<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">PP0101Markov</string>
    <string name="metime"><b>MeTime</b></string>
    <string name="welcome_to_the_gallery_salon"><b>Welcome to \nThe Gallery Salon</b></string>
    <string name="follow_the_steps_to_schedule_your_next_appointment_with_us">Follow the steps to schedule your \nnext appointment with us.</string>
    <string name="please_choose_a_service">Please, choose a service:</string>
    <string name="nail">Nail</string>
    <string name="massage">Massage</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="hair">Hair</string>
    <string name="skip"><u>Skip</u></string>
    <string name="now_choose_one_that_fit_your_needs"><b>Now, choose one \nthat fit your needs:</b></string>
    <string name="basic_manicure"><b>Basic Manicure</b></string>
    <string name="_30">$30</string>
    <string name="choose_a_professional_e_see_the_slots_available"><b>Choose a professional e \nsee the slots available</b></string>
    <string name="i_don_t_have_a_preference"><b><u>I don\'t have a preference</u></b></string>
    <string name="before_schedule_please_enter_your_account_or_create_one">Before schedule, please enter your account or create one!</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="hey_there">Hey there!</string>
    <string name="please_check_the_details_and_confirm_your_appointment">Please check the details and \nconfirm your appointment</string>
    <string name="date">Date</string>
    <string name="book">Book</string>
    <string name="please_enter_your_email_and_your_password">Please enter your email and your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter">Enter</string>
    <string name="fill_in_all_the_fields">Fill in all the fields</string>
    <string name="nail_designer">Nail Designer</string>
    <string name="hair_stylist">Hair Stylist</string>
    <string name="masseur">Masseur</string>
    <string name="brow_master">Brow Master</string>
    <string name="specialist">Specialist</string>
    <string name="error_fetching_bookings">Error fetching bookings</string>
    <string name="error_parsing_bookings">Error parsing bookings</string>
    <string name="cancel_failed">Cancel failed</string>
    <string name="booking_cancelled">Booking cancelled</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="confirm_the_password">Confirm the password</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="the_password_must_contain_only_latin_letters_and_numbers">The password must contain only Latin letters and numbers.</string>
    <string name="the_password_must_not_be_longer_than_8_characters">The password must not be longer than 8 characters.</string>
    <string name="error_authorization_token_not_received">Error: authorization token not received</string>
    <string name="password_change_error">"Password change error: "</string>
    <string name="the_password_has_been_successfully_changed">The password has been successfully changed!</string>
    <string name="choose_a_payment_method">Choose a payment method</string>
    <string name="add_a_card">Add a card</string>
    <string name="the_payment_was_successful">The payment was successful!</string>
    <string name="profile_upload_error">Profile upload error</string>
    <string name="name_and_email_are_required">Name and email are required</string>
    <string name="profile_email_and_or_password_updated">Profile, email and/or password updated</string>
    <string name="email_password_update_error">Email/Password update error</string>
    <string name="the_profile_has_been_updated">The profile has been updated</string>
    <string name="profile_update_error">Profile update error</string>
    <string name="enter_the_correct_email_address">Enter the correct email address</string>
    <string name="required_field">Required field</string>
    <string name="entrance">Entrance...</string>
    <string name="login_error">"Login error: "</string>
    <string name="successful_login">Successful login</string>
    <string name="error_loading_services">Error loading services</string>
    <string name="error_parsing_services">Error parsing services</string>
    <string name="couldn_t_cancel">Couldn\'t cancel</string>
    <string name="booking_canceled">Booking canceled</string>
    <string name="time_error">Time error</string>
    <string name="booking_error">"Booking error: "</string>
    <string name="the_booking_is_successful">The booking is successful!</string>
    <string name="error_parsing_the_response">"Error parsing the response: "</string>
    <string name="choose_the_day_and_time">Choose the day and time</string>
    <string name="send_code">Send code</string>
    <string name="enter_the_6_digit_code">Enter the 6-digit code</string>
    <string name="the_code_is_confirmed">The code is confirmed!</string>
    <string name="card">Card</string>
    <string name="the_pin_code_is_set">The PIN code is set</string>
    <string name="invalid_pin_code">Invalid PIN code</string>
    <string name="error_loading_profile">Error loading profile</string>
    <string name="error">"Error: "</string>
    <string name="a_password_reset_email_has_been_sent_to">"A password reset email has been sent to: "</string>
    <string name="no_app_found_to_make_calls">No app found to make calls</string>
    <string name="no_app_found_to_send_sms">No app found to send SMS</string>
    <string name="salon_info_copied_to_clipboard">Salon info copied to clipboard</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="password_must_be_less_then_8_characters">Password must be less then 8 characters</string>
    <string name="registration_failed">"Registration failed: "</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="your_bookings">Your Bookings</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="service">Service</string>
    <string name="location">Location</string>
    <string name="payment">Payment</string>
    <string name="total">Total</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="name">Name</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="save_profile">Save Profile</string>
    <string name="hello">Hello,</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="change_profile">Change Profile</string>
    <string name="exit">Exit</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="directions">Directions</string>
    <string name="share">Share</string>
    <string name="add_card">Add Card</string>
    <string name="exp_date">Exp. Date</string>
    <string name="card_number">Card number</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="thank_you_for_booking_with">Thank you for booking with</string>
    <string name="your_booking_details">Your booking details:</string>
    <string name="go_to_check_out">Go to Check out</string>
    <string name="main_page">Main page</string>
    <string name="are_you_sure_you_want_to_cancel_this_appointment">Are you sure, you want to cancel this appointment?</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="first_time_here">First time here?</string>
    <string name="create_your_account">Create your account</string>
    <string name="forget_password">Forget Password?</string>
    <string name="continued">Continue</string>
    <string name="start">Start</string>
    <string name="enter_one_time_password">Enter One Time Password</string>
    <string name="cash">Cash</string>
    <string name="remove">Remove</string>
    <string name="enter_pin_code">Enter pin-code</string>
    <string name="exit_from_system">Exit from system</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
</resources>