<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/metime"
    android:gravity="center"
    android:layout_marginTop="50dp"
    />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/state"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/please_choose_a_service"
        android:layout_marginTop="40dp"/>
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="20dp">
    <ImageView
        android:id="@+id/imageNail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nails"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/nail"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:id="@+id/imageEyebrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eyebrowns"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/eyebrows"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:id="@+id/imageMassage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/massage"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/massage"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:id="@+id/imageHair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hair"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/hair"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>
</GridLayout>
    <TextView
        android:id="@+id/textSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/skip"
        android:textColor="#FDCCC5"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>