<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/previousBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/light" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metime"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/state_2"
        android:layout_marginTop="25dp"/>
    <TextView
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_professional_e_see_the_slots_available"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp" />
    <ListView
        android:id="@+id/listViewMasters"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="300dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/i_don_t_have_a_preference"
        android:textColor="#FDCCC5"/>
</LinearLayout>